--- a/popup.html
+++ b/popup.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Jira Hours</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="card">
-    <h3>⏱️ Registrar Horas no Jira</h3>
+    <h3>Registrar Horas no Jira</h3>
 
     <label>Tarefa (Issue Key):</label>
     <input type="text" id="issue" placeholder="PROJ-123">
 
-    <label>Horas:</label>
-    <input type="number" id="hours" step="0.5" min="0">
+    <div class="row">
+      <div class="field">
+        <label>Horas:</label>
+        <input type="number" id="hours" step="0.5" min="0">
+      </div>
+      <label class="switch-inline">
+        <span>Apenas hoje</span>
+        <input type="checkbox" id="todayOnly">
+      </label>
+    </div>
+
 
     <div class="date-range">
       <div>
@@ -26,12 +37,12 @@
       </div>
     </div>
 
-    <div class="switch">
-      <input type="checkbox" id="todayOnly">
-      <span>Usar apenas data atual</span>
-    </div>
+    <!-- <label class="switch">
+      <input type="checkbox" id="themeToggle">
+      <span>Ativar modo claro</span>
+    </label> -->
 
-    <div id="hint" class="hint"></div>
+    <div class="hint" id="hint">Defina um intervalo de datas ou use "apenas hoje".</div>
 
     <button id="registerBtn">Registrar</button>
     <div class="status"></div>
@@ -39,4 +50,5 @@
 
   <script src="popup.js"></script>
 </body>
+
 </html>
